--- a/css/style.css
+++ b/css/style.css
@@ -22,20 +22,22 @@ body {
 }
 
 .wrapper ul li {
-    background: #262626;
-    width: 170px;
+    background: wheat;
+    width: 110px;
     border: 1px solid #fff;
-    height: 50px;
+    height: 45px;
     line-height: 50px;
     text-align: center;
     float: left;
-    color: #fff;
+    color: black;
     font-size: 25x;
     position: relative;
+    font-family: sans-serif;
+    font-weight:900;
 }
 
 .wrapper ul li:hover {
-    background: crimson;
+    background: lightskyblue;
 }
 
 .wrapper ul ul {
@@ -53,18 +55,23 @@ body {
 .wrapper p {
     float: left;
     font-size: 35px;
-    margin: 0px;
-    padding: 10px 10px;
+    margin: 5px 10px;
     font-family:sans-serif;
     font-weight:bolder;
+    color: white;
 }
 
 #footer {
     position: fixed;
-    padding: 10px 10px 0px 10px;
+    margin-bottom: 10px;
     bottom: 0;
     width: 100%;
-    height: 40px;
+    height: 20px;
     text-align: center;
     background: wheat;
+    font-family: sans-serif;
+}
+
+.me {
+    background-image: url(../img/me.jpg)
 }
