Added no repeat line

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     background-position: center center;
     height: 100vh;
     font-family: sans-serif;
+    background-repeat: no-repeat;
 }
 
 a:link, a:focus, a:active, a:visited {
